--- a/package.json
+++ b/package.json
@@ -3,8 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "eslint": "^4.8.0",
-    "react-scripts": "0.9.0"
+   "babel-core": "^6.26.0",
+   "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
+   "babel-preset-env": "^1.6.0",
+   "babel-preset-react": "^6.24.1",
+   "eslint": "^4.8.0",
+   "eslint-plugin-import": "^2.7.0",
+   "eslint-plugin-jsx-a11y": "^6.0.2",
+   "eslint-plugin-react": "^7.4.0",
+   "react-scripts": "0.9.0"
   },
   "dependencies": {
     "react": "^15.4.2",
@@ -16,5 +23,8 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "./node_modules/.bin/eslint ./"
-  }
+  },
+  "extends": [
+    "react-app"
+  ]
 }
